--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testbuildvuelatest",
+  "name": "gerdarzh-frontend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,18 +12,24 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "lottie-web": "^5.12.2",
+    "typescript": "^5.7.3",
     "uniq": "^1.0.1",
     "vue": "^3.4.21",
+    "vue-i18n": "^11.0.1",
     "vue-router": "^4.3.0",
     "vue3-lottie": "^3.3.0"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^6.0.3",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.5",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
