--- a/package.json
+++ b/package.json
@@ -12,29 +12,32 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "lottie-web": "^5.12.2",
-    "typescript": "^5.7.3",
+    "axios": "^1.9.0",
+    "lottie-web": "^5.13.0",
+    "typescript": "^5.8.3",
     "uniq": "^1.0.1",
-    "vue": "^3.4.21",
-    "vue-i18n": "^11.0.1",
-    "vue-router": "^4.3.0",
-    "vue3-lottie": "^3.3.0"
+    "vue": "^3.5.16",
+    "vue-i18n": "^11.1.5",
+    "vue-router": "^4.5.1",
+    "vue3-lottie": "^3.3.1"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^6.0.3",
-    "@rushstack/eslint-patch": "^1.8.0",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/test-utils": "^2.4.5",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.23.0",
-    "jsdom": "^24.0.0",
-    "prettier": "^3.2.5",
-    "vite": "^5.2.8",
+    "@intlify/unplugin-vue-i18n": "^6.0.8",
+    "@rushstack/eslint-patch": "^1.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.27.0",
+    "eslint-plugin-vue": "^10.1.0",
+    "jsdom": "^26.1.0",
+    "postcss": "^8.5.4",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.3.5",
     "vite-plugin-vue-images": "^0.6.1",
-    "vitest": "^1.4.0"
+    "vitest": "^3.1.4"
   }
 }
