--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "esbuild": "^0.25.5",
     "eslint": "^9.27.0",
     "eslint-plugin-vue": "^10.1.0",
     "jsdom": "^26.1.0",
