--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "vite": "^6.3.5",
     "vite-plugin-vue-images": "^0.6.1",
     "vitest": "^3.1.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
