--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5",
     "vite-plugin-vue-images": "^0.6.1",
