--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "lottie-web": "^5.13.0",
+    "pinia": "^3.0.4",
     "typescript": "^5.8.3",
     "uniq": "^1.0.1",
     "vue": "^3.5.16",
