--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^3.5.16",
     "vue-i18n": "^11.1.5",
     "vue-router": "^4.5.1",
-    "vue3-lottie": "^3.3.1"
+    "vue3-lottie": "^3.3.1",
+    "vuetify": "^3.12.0"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^6.0.8",
